--- a/default.hbs
+++ b/default.hbs
@@ -108,7 +108,7 @@
             $.each(window.social_link,function(type, url){
                 if(typeof url ==="string" && url_regexp.test(url)){
                     $('<li>').append($('<a>',{
-                                        html: '<i class="fa fa-'+type+'"></i>',
+                                        html: '<i class="fa fa-'+type.toLowerCase()+'"></i>',
                                         title: type,
                                         href: url,
                                         target: "_blank"
