--- a/index.hbs
+++ b/index.hbs
@@ -9,7 +9,7 @@
         <div class="main-header-content inner">
             {{#if @blog.logo}}
             <div class="blog-logo">
-                <img src="{{@blog.logo}}" alt="{{@blog.title}}" />
+                <img src="{{asset "img/homeSig.svg"}}" alt="{{@blog.title}}" />
             </div>
             {{/if}}
             <h1 class="page-title">{{@blog.title}}</h1>
