--- a/default.hbs
+++ b/default.hbs
@@ -29,7 +29,9 @@
     <link rel="manifest" href="{{asset "img/favicons/manifest.json"}}">
     <link rel="mask-icon" href="{{asset "img/favicons/safari-pinned-tab.svg"}}" color="#FF4500">
     <link rel="shortcut icon" href="{{asset "img/favicons/favicon.ico"}}">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="apple-mobile-web-app-title" content="cdemi's Blog">
+
+    <meta name="msapplication-TileColor" content="#ff4500">
     <meta name="msapplication-TileImage" content="{{asset "img/favicons/mstile-144x144.png"}}">
     <meta name="msapplication-config" content="{{asset "img/favicons/browserconfig.xml"}}">
 
