--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     {{! Page Meta }}
-    <title>{{meta_title}}</title>
+    <title>blog.cdemi.io</title>
     <meta name="description" content="{{meta_description}}" />
 
     <meta name="HandheldFriendly" content="True" />
@@ -59,7 +59,7 @@
         {{{body}}}
 
         <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a></section>
+            <section class="copyright"><a href="{{@blog.url}}">blog.cdemi.io</a></section>
         </footer>
 
     </div>
