--- a/amp.hbs
+++ b/amp.hbs
@@ -808,7 +808,7 @@
             </header>
             {{#if image}}
             <figure class="post-image">
-                <amp-img src="{{image absolute="true"}}" width="600" height="400" layout="responsive"></amp-img>
+                <amp-img src="{{img_url feature_image absolute="true"}}" width="600" height="400" layout="responsive"></amp-img>
             </figure>
             {{/if}}
             <section class="post-content">
