--- a/author.hbs
+++ b/author.hbs
@@ -5,7 +5,7 @@
 
 {{! Everything inside the #author tags pulls data from the author }}
 {{#author}}
-    <header class="main-header author-head {{#if cover}}" style="background-image: url({{cover}}){{else}}no-cover{{/if}}">
+    <header class="main-header author-head {{#if cover_image}}" style="background-image: url({{cover_image}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
             <a class="back-button" href="{{@blog.url}}"><span class="fa fa-angle-left"></span><span>Home</span></a>
             <a class="subscribe-button" href="{{@blog.url}}/rss/"><span class="fa fa-rss"></span><span>Subscribe</span></a>
@@ -15,7 +15,7 @@
     <section class="author-profile inner">
         {{#if image}}
         <figure class="author-image">
-            <div class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></div>
+            <div class="img" style="background-image: url({{img_url profile_image}})"><span class="hidden">{{name}}'s Picture</span></div>
         </figure>
         {{/if}}
         <h1 class="author-title">{{name}}</h1>
