--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -14,7 +14,7 @@
     </section>
     <footer class="post-meta">
         <div class="largePage">
-            {{#if author.image}}<a href="{{url}}"><img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" /></a>{{/if}}
+            {{#if author.profile_image}}<a href="{{url}}"><img class="author-thumb" src="{{author.profile_image}}" alt="{{author.name}}" nopin="nopin" /></a>{{/if}}
             {{author}}
             {{tags prefix=" on "}}
             <a href="{{url}}" class="post-date">Posted <time datetime="{{date format='YYYY-MM-DD'}}">{{date timeago="true"}}</time></a>
