--- a/post.hbs
+++ b/post.hbs
@@ -6,8 +6,8 @@
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
+<header class="main-header post-head {{#if feature_image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}">
+    <nav class="main-nav {{#if feature_image}}overlay{{/if}} clearfix">
         <a class="back-button" href="{{@blog.url}}"><span class="fa fa-angle-left"></span><span>Home</span></a>
         <a class="subscribe-button" href="{{@blog.url}}/rss/"><span class="fa fa-rss"></span><span>Subscribe</span></a>
     </nav>
@@ -15,7 +15,7 @@
 
 <main class="content" role="main">
     <article class="{{post_class}}" itemscope itemtype="http://schema.org/Article">
-        <meta itemprop="image" content="{{image absolute="true"}}">
+        <meta itemprop="image" content="{{img_url feature_image absolute="true"}}">
         <header class="post-header">
             <h1 class="post-title"  itemprop="name headline">{{title}}</h1>
             <section class="post-meta">
@@ -62,7 +62,7 @@
 
 <aside class="read-next">
     {{#next_post}}
-    <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+    <a class="read-next-story {{#if feature_image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
         <section class="post">
             <h2>{{title}}</h2>
             <p>{{meta_description}}</p>
@@ -70,7 +70,7 @@
     </a>
     {{/next_post}}
     {{#prev_post}}
-    <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+    <a class="read-next-story prev {{#if feature_image}}" style="background-image: url({{img_url feature_image}}){{else}}no-cover{{/if}}" href="{{url}}">
         <section class="post">
             <h2>{{title}}</h2>
             <p>{{meta_description}}</p>
