--- a/amp.hbs
+++ b/amp.hbs
@@ -806,7 +806,7 @@
                     <a href='{{url}}'><time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="Do MMMM YYYY"}}</time></a></p>
                 </section>
             </header>
-            {{#if image}}
+            {{#if feature_image}}
             <figure class="post-image">
                 <amp-img src="{{img_url feature_image absolute="true"}}" width="600" height="400" layout="responsive"></amp-img>
             </figure>
