--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -722,8 +722,8 @@ body.nav-opened .nav {
 /* Hide when there's no cover image or on page2+ */
 .no-cover .scroll-down,
 .no-cover.main-header:after,
-.archive-template .scroll-down,
-.archive-template .main-header:after {
+.paged .scroll-down,
+.paged .main-header:after {
     display: none
 }
 
@@ -1286,7 +1286,7 @@ body:not(.post-template) .post-title {
 
 /* Turn off meta for page2+ to make room for extra
    pagination prev/next links */
-.archive-template .author-profile .author-meta {
+.paged .author-profile .author-meta {
     display: none;
 }
 
@@ -1514,12 +1514,12 @@ body:not(.post-template) .post-title {
 }
 
 /* On page2+ make all the headers smaller */
-.archive-template .main-header {
+.paged .main-header {
     max-height: 30vh;
 }
 
 /* On page2+ show extra pagination controls at the top of post list */
-.archive-template .extra-pagination {
+.paged .extra-pagination {
     display: block;
 }
 
@@ -1585,7 +1585,7 @@ body:not(.post-template) .post-title {
     .scroll-down,
     .home-template .main-header:after { display: none; }
 
-    .archive-template .main-header {
+    .paged .main-header {
         min-height: 180px;
         padding: 10% 0;
     }
@@ -1719,7 +1719,7 @@ body:not(.post-template) .post-title {
         height: 30vh;
     }
 
-    .archive-template .main-header {
+    .paged .main-header {
         max-height: 20vh;
         min-height: 160px;
         padding: 10% 0;
@@ -1957,7 +1957,7 @@ body:not(.post-template) .post-title {
         font-size: 1.4rem;
     }
 
-    .archive-template .main-header .page-description {
+    .paged .main-header .page-description {
         display: none;
     }
 
@@ -2033,6 +2033,17 @@ body:not(.post-template) .post-title {
     }
 }
 
+
+/*
+    Fixes for Ghost 2.0
+*/
+.kg-width-wide img {
+    max-width: 85vw;
+}
+  
+.kg-width-full img {
+    max-width: 100vw;
+}
 
 /* ==========================================================================
    End of file. Animations should be the last thing here. Do not add stuff
