--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -14,8 +14,8 @@
     </section>
     <footer class="post-meta">
         <div class="largePage">
-            {{#if author.profile_image}}<a href="{{url}}"><img class="author-thumb" src="{{author.profile_image}}" alt="{{author.name}}" nopin="nopin" /></a>{{/if}}
-            {{author}}
+            {{#if primary_author.profile_image}}<a href="{{url}}"><img class="author-thumb" src="{{primary_author.profile_image}}" alt="{{primary_author.name}}" nopin="nopin" /></a>{{/if}}
+            {{primary_author.name}}
             {{tags prefix=" on "}}
             <a href="{{url}}" class="post-date">Posted <time datetime="{{date format='YYYY-MM-DD'}}">{{date timeago="true"}}</time></a>
         </div>
