fixed pwa content

--- a/default.hbs
+++ b/default.hbs
@@ -123,7 +123,7 @@
             } else {
                 // Register the service worker
                 navigator.serviceWorker
-                .register("{{asset "js/pwabuilder-sw.js"}}", {
+                .register("/pwabuilder-sw.js", {
                     scope: "./"
                 })
                 .then(function (reg) {
