--- a/default.hbs
+++ b/default.hbs
@@ -14,7 +14,7 @@
     {{! Favicon }}
     <link rel="apple-touch-icon" sizes="180x180" href="{{asset "img/favicons/apple-touch-icon-180x180.png"}}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{asset "img/favicons/favicon-32x32.png"}}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{asset "img/favicons//favicon-16x16.png"}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{asset "img/favicons/favicon-16x16.png"}}">
     <link rel="manifest" href="{{asset "img/favicons/site.webmanifest"}}">
     <link rel="mask-icon" href="{{asset "img/favicons/safari-pinned-tab.svg"}}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#004eb7">
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileColor" content="#004eb7">
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" integrity="sha384-hQpvDQiCJaD2H465dQfA717v7lu5qHWtDbWNPvaTJ0ID5xnPUlVXnKzq7b8YUkbN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
 
@@ -85,7 +85,7 @@
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
             ga('create', window.ga_id, 'auto');
             ga('require', 'linkid', 'linkid.js');
             ga('send', 'pageview');
